--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>John Lemar L. Gonzales Portfolio</title>
   <link rel="stylesheet" href="styles.css">
+  <!-- Include Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
@@ -15,8 +17,8 @@
     <h1>John Lemar L. Gonzales</h1>
     <h2>Innovator, Leader, Technologist</h2>
     <div class="buttons">
-      <a href="#" class="btn">Projects</a>
-      <a href="#" class="btn">Resume</a>
+      <a href="#" class="btn"><i class="fas fa-rocket"></i> Projects</a>
+      <a href="#" class="btn"><i class="fas fa-file-alt"></i> Resume</a>
     </div>
   </section>
 
@@ -33,19 +35,19 @@
     <h2 class="section-title">Experience</h2>
     <div class="card-container">
       <div class="card">
-        <h4>Information Technology Lead</h4>
+        <h4><i class="fas fa-cogs"></i> Information Technology Lead</h4>
         <p>Google Developer Student Clubs, USTP</p>
         <p>Aug 2024 - Present</p>
         <p>Overseeing IT operations and leading initiatives to integrate innovative technologies into the club's projects and events.</p>
       </div>
       <div class="card">
-        <h4>Information Technology Ambassador</h4>
+        <h4><i class="fas fa-user-tie"></i> Information Technology Ambassador</h4>
         <p>Google Developer Student Clubs, USTP</p>
         <p>Sep 2023 - Sep 2024</p>
         <p>Acted as a bridge between students and the IT field, promoting GDSC's mission and encouraging involvement in tech-focused activities and training.</p>
       </div>
       <div class="card">
-        <h4>School Researcher</h4>
+        <h4><i class="fas fa-lightbulb"></i> School Researcher</h4>
         <p>USTP</p>
         <p>2022</p>
         <p>Led a winning research project utilizing Roblox Studio to create an award-winning "Online 3D Touring" system.</p>
@@ -58,43 +60,43 @@
     <h2 class="section-title">Skills & Tools</h2>
     <div class="skills-container">
       <div class="skills-card">
-        <h4>Programming</h4>
+        <h4><i class="fas fa-code"></i> Programming</h4>
         <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Python</li>
-          <li>Java</li>
-          <li>C</li>
-          <li>LUA</li>
+          <li><i class="fab fa-html5"></i> HTML</li>
+          <li><i class="fab fa-css3-alt"></i> CSS</li>
+          <li><i class="fab fa-js"></i> JavaScript</li>
+          <li><i class="fas fa-python"></i> Python</li>
+          <li><i class="fab fa-java"></i> Java</li>
+          <li><i class="fas fa-terminal"></i> C</li>
+          <li><i class="fas fa-gamepad"></i> LUA</li>
         </ul>
       </div>
       <div class="skills-card">
-        <h4>Tools & Databases</h4>
+        <h4><i class="fas fa-tools"></i> Tools & Databases</h4>
         <ul>
-          <li>MySQL</li>
-          <li>Git</li>
-          <li>GitHub</li>
-          <li>WordPress</li>
-          <li>Kali Linux</li>
-          <li>VSCode</li>
+          <li><i class="fas fa-database"></i> MySQL</li>
+          <li><i class="fab fa-git"></i> Git</li>
+          <li><i class="fab fa-github"></i> GitHub</li>
+          <li><i class="fas fa-globe"></i> WordPress</li>
+          <li><i class="fas fa-shield-alt"></i> Kali Linux</li>
+          <li><i class="fas fa-code"></i> VSCode</li>
         </ul>
       </div>
       <div class="skills-card">
-        <h4>Design</h4>
+        <h4><i class="fas fa-pencil-ruler"></i> Design</h4>
         <ul>
-          <li>Figma</li>
-          <li>Photoshop</li>
-          <li>Premiere Pro</li>
+          <li><i class="fas fa-vector-square"></i> Figma</li>
+          <li><i class="fas fa-paint-brush"></i> Photoshop</li>
+          <li><i class="fas fa-video"></i> Premiere Pro</li>
         </ul>
       </div>
       <div class="skills-card">
-        <h4>Leadership</h4>
+        <h4><i class="fas fa-user-friends"></i> Leadership</h4>
         <ul>
-          <li>Research</li>
-          <li>IT Management</li>
-          <li>Team Collaboration</li>
-          <li>Project Leadership</li>
+          <li><i class="fas fa-lightbulb"></i> Research</li>
+          <li><i class="fas fa-network-wired"></i> IT Management</li>
+          <li><i class="fas fa-users"></i> Team Collaboration</li>
+          <li><i class="fas fa-project-diagram"></i> Project Leadership</li>
         </ul>
       </div>
     </div>
@@ -105,15 +107,15 @@
     <h2 class="section-title">Achievements</h2>
     <div class="achievements-grid">
       <div class="achievement-item">
-        <h4>Champion: “Online 3D Touring”</h4>
+        <h4><i class="fas fa-award"></i> Champion: “Online 3D Touring”</h4>
         <p>Roblox Studio-based project awarded for its innovative design and functionality.</p>
       </div>
       <div class="achievement-item">
-        <h4>Python Programming Certification</h4>
+        <h4><i class="fas fa-certificate"></i> Python Programming Certification</h4>
         <p>Received certification for demonstrating advanced Python programming skills.</p>
       </div>
       <div class="achievement-item">
-        <h4>Community Leader</h4>
+        <h4><i class="fas fa-users"></i> Community Leader</h4>
         <p>Recognized for leadership in tech and community engagement projects.</p>
       </div>
     </div>
@@ -122,10 +124,10 @@
   <!-- Footer Section -->
   <footer class="footer">
     <div>
-      <a href="#">LinkedIn</a>
-      <a href="#">GitHub</a>
-      <a href="#">Twitter</a>
-      <a href="#">Email</a>
+      <a href="#"><i class="fab fa-linkedin"></i> LinkedIn</a>
+      <a href="#"><i class="fab fa-github"></i> GitHub</a>
+      <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
+      <a href="#"><i class="fas fa-envelope"></i> Email</a>
     </div>
     <p>© 2024 John Lemar L. Gonzales. All rights reserved.</p>
   </footer>
