Change minor details

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
     <div class="card-container">
       <div class="card">
         <h4><i class="fas fa-cogs"></i> Information Technology Lead</h4>
-        <p>Google Developer Student Clubs, USTP</p>
+        <p>Google Developer Student Clubs, University of Science and Technology of Southern Philippines, CDO</p>
         <p>Aug 2024 - Present</p>
         <p>Overseeing IT operations and leading initiatives to integrate innovative technologies into the club's projects and events.</p>
       </div>
       <div class="card">
         <h4><i class="fas fa-user-tie"></i> Information Technology Ambassador</h4>
-        <p>Google Developer Student Clubs, USTP</p>
+        <p>Google Developer Student Clubs, University of Science and Technology of Southern Philippines, CDO</p>
         <p>Sep 2023 - Sep 2024</p>
         <p>Acted as a bridge between students and the IT field, promoting GDSC's mission and encouraging involvement in tech-focused activities and training.</p>
       </div>
       <div class="card">
         <h4><i class="fas fa-lightbulb"></i> School Researcher</h4>
-        <p>USTP</p>
+        <p>Liceo de Cagayan University</p>
         <p>2022</p>
         <p>Led a winning research project utilizing Roblox Studio to create an award-winning "Online 3D Touring" system.</p>
       </div>
@@ -107,7 +107,7 @@
     <h2 class="section-title">Achievements</h2>
     <div class="achievements-grid">
       <div class="achievement-item">
-        <h4><i class="fas fa-award"></i> Champion: “Online 3D Touring”</h4>
+        <h4><i class="fas fa-award"></i> ICT Winner: “Online 3D Touring”</h4>
         <p>Roblox Studio-based project awarded for its innovative design and functionality.</p>
       </div>
       <div class="achievement-item">
